# w2_dbquery

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.chat/: 2026-01-18-read-specfeatureexportmd.txt  claude_chat_instruction.md
Test/: api.http
backend/: config.py  database.py  main.py
backend/models/: schemas.py
backend/routers/: connections.py  query.py
backend/services/: llm.py  postgres.py  sql_validator.py
frontend/: index.html  package-lock.json  package.json  postcss.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ConnectionForm.tsx  ConnectionList.tsx  ConnectionSelector.tsx  QueryEditor.tsx  QueryInput.tsx  ResultTable.tsx  SchemaViewer.tsx  SqlPreview.tsx
frontend/src/components/common/: ErrorBoundary.tsx  Loading.tsx  Toast.tsx
frontend/src/pages/: Connections.tsx  Home.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: export.ts
spec/: FEATURE_EXPORT.md  back-end-dayone-test-result.md  feature_tab_switch_for_sql_input.md  instructions.md  spec-back-end-day-one.dev.md  spec-front-end-day-one.dev.md  spec.feature_export.md  spec.test.md
